--- a/index.html
+++ b/index.html
@@ -21,11 +21,25 @@ Select ONE Additional Feature to Add
   <meta charset="utf-8">
   <style>
 
+
+body{
+    background-image: url(https://i.gifer.com/embedded/download/OOMS.gif);
+    background-size: cover;
+    height: 100vh;
+    padding:0;
+    margin:0;
+}
+
+h1 {
+  text-align: center;
+  font-family: ;
+
+
   </style>
 </head>
 <body>
 
-  <h1>My Unofficial Local Guide to [~~~]</h1>
+  <h1>Take A Trip To Oz</h1>
   
   <h3>Content Element 1</h3>
   <hr>
