--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@ Select ONE Additional Feature to Add
 <head>
   <title>Unit 4 Project</title>
   <meta charset="utf-8">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Birthstone&display=swap" rel="stylesheet">
+
+
   <style>
 
 
@@ -34,18 +40,20 @@ body{
 }
 
 h1 {
-   font-size: 6em; 
+   font-size: 10em; 
    font-weight: bold;
    color: rgb(244, 194, 85);
    text-align: center;
-
+   font-family: "Birthstone", cursive;
 }
 
 hr {border-color: lightpink;
    }
 
 h3 {color: rgb(244, 194, 85);
-  background-color: rgb(71, 138, 68);
+    background-color: rgb(71, 138, 68);
+    font-size: 1.5em;
+    text-align: center;
 }
 
 
@@ -55,12 +63,17 @@ h3 {color: rgb(244, 194, 85);
 
   <h1><u>Take A Trip To Oz</u></h1>
   
-  <h3>Go Visit The Munchkins Down in Muchkinland!</h3>
+  <h3>Take a Stroll Through Muchkinland!</h3>
+
+<center><img src="https://cdn.shopify.com/s/files/1/0432/1981/files/WamegoAugust1_480x480.jpg?v=1724951266" alt="Munchkinland"></center>
+
   <hr>
-  <p>About Content Element #1</p>
+  <p>Should get caught up by a tornado in your state, and find your house, mansion, or apartment above a 
+   witch, you might want to come out an give the munchkins a quick hello! This beautiful town is  
+  </p>
   <br><br>
 
-  <h3>Content Element 2</h3>
+  <h3>Spend Your Short Day at the Emerald City</h3>
   <hr>
   <p>About Content Element #2</p>
   <br><br>
